[package]
name = "freefish"
version = "0.1.0"
description = "FreeFish - 摸鱼悬浮 txt 阅读器"
edition = "2021"

[lib]
name = "freefish_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
chardetng = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
